
Tools
* nk2export
  - add export mode like pffexport
  - export alias files instead of item values
* nk2info
  - create info handle ?

Deployment:
* create debian package files

Test:
* add autoconf/make test suite

Beta release
* remove deprecated functions in libnk2_legacy.[ch]
* remove deprecated definition in include/libnk2/mapi.h
* update man pages
* add documentation

20100628
* update for libfmapi
* updated msvcpp files

20100627
* updated common, libcstring, liberror, libnotify, libsystem, libuna,
  libbfio, libfdatetime, libfmapi
* clean up
* updated codepages
* updated array type
* added libfguid, libfwnt

20100514
* small change in libnk2_file.c
* updated common, liberror

20100510
* updated msvscpp files
* updated macosx files
* email change in manuals

20100505
* updated common, libcstring, liberror, libnotify, libfdatetime, libfmapi,
  libuna, libbfio, libsystem
* changed amount of in number of
* updated array type
* removed list type
* updated manpage libnk2.3
* updated msvscpp files of sub libraries

20100416
* added libcstring
* email change
* updated configure.ac
* updated common, liberror, libnotify, libuna, libbfio, libsystem,
  libfdatetime, libfmapi
* updated guid.[ch] log_handle.[ch]

20100114
* 2010 update
* updated common, liberror, libnotify, libsystem, libuna, libbfio
* updated libfdatetime, libfmapi
* updated msvscpp project files
* removed nk2common.h
* updated array type
* removed list_element from item
* moved file io handle from io handle to file
* libnotify update
* updated check signature
* updated manuals
* removed list type
* default codepage is now 1252
* added libnk2_codepage.h
* removed All rights reserved
* updated libnk2_libuna.h
* byte_stream update
* added libnk2_mapi.h
* updated mapi.h
* updated guid.[ch]
* move nk2 file handle from export handle to nk2export

20091020
* small changes in nk2tools Makefile.am
* correction in error output

20091016
* correction in error output

20091015
* minor adjustments

20091013