@@ -37,11 +37,11 @@
  * for local use of libnk2
  */
 #else
-#define LIBNK2_VERSION					20100628
+#define LIBNK2_VERSION					20100706
 
 /* The libnk2 version string
  */
-#define LIBNK2_VERSION_STRING				"20100628"
+#define LIBNK2_VERSION_STRING				"20100706"
 
 /* The libnk2 file access
  * bit 1        set to 1 for read access
